# job-hopper

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  app.webmanifest  env.d.ts  eslint.config.ts  index.html  netlify.toml  package-lock.json  package.json  tailwind.config.js  tsconfig.app.json  vite.config.ts
.githooks/: pre-commit-supabase-types
base_project_reqs/: admin-guide-job-scraping.md  ai-briefings-and-email-job-hopper.md  apollo-integration-job-scraping.md  architecture-and-data-flow.md  cost-summary-job-scraping.md  data-migration-google-sheets.md  dual-data-flow-and-bd-integration.md  job-hopper-api-spec.md  job-hopper-e2e-and-docs.md  job-scraping-schema.md  job-scraping-test-checklist.md  job-scraping-workflow-spec.md  matching-rules-job-hopper.md  new-subscriber-24h-first-batch.md  pwa-install-and-web-push.md  recruiting-company-filter-logic.md  recruiting-filter-code-node.js  scraper-research-and-recommendation.md  (+3 more)
job-processor-service/: .env.example  README.md  pyproject.toml
job-processor-service/data/: review_merge_candidates.csv  review_umbrella_feins.csv  scope_top_sponsors.csv
job-processor-service/job_processor/: __init__.py  api.py  cli.py  deps.py  domain_resolution.py  external_apis.py  lca_normalizer.py  llm_ops.py  main.py  merges.py  models.py  pipeline.py  prompts.py  settings.py  sponsorship_domain_backfill.py  sponsorship_ingest.py  sponsorship_resolution.py  sponsorship_scope.py  sponsorship_scoring.py  supabase_client.py  text_utils.py
job-processor-service/tests/: test_lca_normalizer.py  test_sponsorship_scoring.py
(+350 files in other folders)
