[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "job-processor-service"
version = "0.1.0"
description = "FastAPI port of n8n job-processor workflows"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
  "fastapi[standard]>=0.115.0",
  "httpx>=0.27.0",
  "openai>=1.54.0",
  "pydantic>=2.9.0",
  "pydantic-settings>=2.6.0",
  "typer>=0.12.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
job-processor-api = "job_processor.main:run_api"
job-processor = "job_processor.cli:main"

[tool.fastapi]
entrypoint = "job_processor.api:app"

[tool.hatch.build.targets.wheel]
packages = ["job_processor"]

[tool.hatch.build.targets.sdist]
include = ["job_processor", "README.md", "pyproject.toml"]
